--- a/strategies/inspect_y_logret_performance.ipynb
+++ b/strategies/inspect_y_logret_performance.ipynb
@@ -544,7 +544,9 @@
    "id": "7ad3289b",
    "metadata": {},
    "source": [
-    "# Results for 48h log return"
+    "# Results for 48h log return\n",
+    "\n",
+    "## The models' q5 and q10 predictions are straight lines, so I disabled short strategy for it"
    ]
   },
   {
@@ -772,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "id": "71817466",
    "metadata": {},
    "outputs": [
@@ -782,19 +784,16 @@
      "text": [
       "Indicator value counts (train/val/test):\n",
       "signal_prob_exp_q50\n",
-      "-1     1356\n",
-      " 0    10610\n",
-      " 1     3538\n",
+      "0    7181\n",
+      "1    8272\n",
       "Name: count, dtype: int64\n",
       "signal_prob_exp_q50\n",
-      "-1      55\n",
-      " 0    3222\n",
-      " 1      45\n",
+      "0    2907\n",
+      "1     404\n",
       "Name: count, dtype: int64\n",
       "signal_prob_exp_q50\n",
-      "-1      80\n",
-      " 0    3179\n",
-      " 1      64\n",
+      "0    3255\n",
+      "1      58\n",
       "Name: count, dtype: int64\n"
      ]
     },
@@ -802,104 +801,104 @@
      "data": {
       "text/plain": [
        "(            timestamp    y_true  pred_q05  pred_q10  pred_q15  pred_q25  \\\n",
-       " 0 2023-01-31 00:00:00  0.058260  -0.04241 -0.032459 -0.026026 -0.013325   \n",
-       " 1 2023-01-31 01:00:00  0.048326  -0.04241 -0.032459 -0.026026 -0.013325   \n",
-       " 2 2023-01-31 02:00:00  0.044586  -0.04241 -0.032459 -0.026026 -0.013325   \n",
-       " 3 2023-01-31 03:00:00  0.043946  -0.04241 -0.032459 -0.026026 -0.013325   \n",
-       " 4 2023-01-31 04:00:00  0.044035  -0.04241 -0.032459 -0.026026 -0.013325   \n",
+       " 0 2023-01-31 00:00:00  0.020052 -0.076704 -0.051411  0.014310  0.014310   \n",
+       " 1 2023-01-31 01:00:00  0.021190 -0.076704 -0.051411  0.014586  0.014586   \n",
+       " 2 2023-01-31 02:00:00  0.018952 -0.076704 -0.051411  0.014674  0.014674   \n",
+       " 3 2023-01-31 03:00:00  0.022383 -0.076704 -0.051411  0.015676  0.015676   \n",
+       " 4 2023-01-31 04:00:00  0.021943 -0.076704 -0.051411  0.012701  0.012701   \n",
        " \n",
        "    pred_q50  pred_q75  pred_q85  pred_q90  ...  max_cross_gap  exp_ret_avg  \\\n",
-       " 0  0.001399  0.035890  0.051241  0.051241  ...       0.006238     0.008076   \n",
-       " 1  0.001399  0.035890  0.051241  0.051241  ...       0.006238     0.008076   \n",
-       " 2  0.001399  0.035890  0.050781  0.050781  ...       0.005778     0.008019   \n",
-       " 3  0.001399  0.035890  0.050484  0.050484  ...       0.005481     0.007982   \n",
-       " 4  0.001399  0.037067  0.049506  0.049506  ...       0.004503     0.008065   \n",
+       " 0  0.014310  0.021838  0.024044   0.08092  ...       0.032117     0.016694   \n",
+       " 1  0.014586  0.021838  0.024044   0.08092  ...       0.032393     0.016832   \n",
+       " 2  0.014674  0.021838  0.024044   0.08092  ...       0.032481     0.016876   \n",
+       " 3  0.015676  0.021838  0.024044   0.08092  ...       0.033483     0.017377   \n",
+       " 4  0.012701  0.022181  0.024044   0.08092  ...       0.030508     0.015949   \n",
        " \n",
        "    exp_ret_conservative   prob_up  tail_spread  signal_exp  signal_prob  \\\n",
-       " 0              0.000017  0.523756      0.09745           1            0   \n",
-       " 1              0.000017  0.523756      0.09745           1            0   \n",
-       " 2             -0.000029  0.523756      0.09745           1            0   \n",
-       " 3             -0.000059  0.523756      0.09745           1            0   \n",
-       " 4             -0.000039  0.523756      0.09745           1            0   \n",
+       " 0              0.011238  0.860887     0.185918           1            1   \n",
+       " 1              0.011404  0.861051     0.185918           1            1   \n",
+       " 2              0.011456  0.861102     0.185918           1            1   \n",
+       " 3              0.012057  0.861683     0.185918           1            1   \n",
+       " 4              0.010306  0.859905     0.185918           1            1   \n",
        " \n",
        "    signal_quantile  pred_q50_orig  signal_prob_exp_q50  \n",
-       " 0                0       0.001399                    1  \n",
-       " 1                0       0.001399                    1  \n",
-       " 2                0       0.001399                    1  \n",
-       " 3                0       0.001399                    1  \n",
-       " 4                0       0.001399                    1  \n",
+       " 0                0      -0.000115                    0  \n",
+       " 1                0      -0.000115                    0  \n",
+       " 2                0      -0.000530                    0  \n",
+       " 3                0      -0.000530                    0  \n",
+       " 4                0      -0.000530                    0  \n",
        " \n",
        " [5 rows x 22 columns],\n",
        "             timestamp    y_true  pred_q05  pred_q10  pred_q15  pred_q25  \\\n",
-       " 0 2024-11-07 00:00:00  0.013809 -0.051535 -0.033001 -0.029371 -0.015287   \n",
-       " 1 2024-11-07 01:00:00  0.011929 -0.051535 -0.033001 -0.029371 -0.015287   \n",
-       " 2 2024-11-07 02:00:00  0.014866 -0.051535 -0.033001 -0.029371 -0.015287   \n",
-       " 3 2024-11-07 03:00:00  0.016740 -0.051535 -0.033001 -0.029371 -0.015287   \n",
-       " 4 2024-11-07 04:00:00  0.021213 -0.051535 -0.033001 -0.029371 -0.015287   \n",
+       " 0 2024-11-04 21:00:00  0.130250 -0.077052 -0.053408  0.074706  0.074706   \n",
+       " 1 2024-11-04 22:00:00  0.119305 -0.077052 -0.053408  0.067782  0.067782   \n",
+       " 2 2024-11-04 23:00:00  0.122509 -0.077052 -0.053408  0.073519  0.073519   \n",
+       " 3 2024-11-05 00:00:00  0.122598 -0.077052 -0.053408  0.064583  0.064583   \n",
+       " 4 2024-11-05 01:00:00  0.120685 -0.077052 -0.053408  0.061872  0.061872   \n",
        " \n",
        "    pred_q50  pred_q75  pred_q85  pred_q90  ...  max_cross_gap  exp_ret_avg  \\\n",
-       " 0  0.001436  0.025147  0.046099  0.046099  ...       0.001361     0.003586   \n",
-       " 1  0.001436  0.025147  0.046099  0.046099  ...       0.001361     0.003586   \n",
-       " 2  0.001436  0.025147  0.046367  0.046367  ...       0.001630     0.003640   \n",
-       " 3  0.001436  0.025147  0.046367  0.046367  ...       0.001630     0.003640   \n",
-       " 4  0.001436  0.025147  0.046151  0.046151  ...       0.001413     0.003597   \n",
+       " 0  0.074706  0.074706  0.095152  0.095152  ...       0.094295     0.061885   \n",
+       " 1  0.067782  0.072415  0.093625  0.093625  ...       0.087371     0.057832   \n",
+       " 2  0.073519  0.073519  0.093625  0.093625  ...       0.093108     0.060893   \n",
+       " 3  0.064583  0.064583  0.076849  0.082645  ...       0.084172     0.053054   \n",
+       " 4  0.061872  0.061872  0.076849  0.082645  ...       0.081461     0.051224   \n",
        " \n",
        "    exp_ret_conservative   prob_up  tail_spread  signal_exp  signal_prob  \\\n",
-       " 0             -0.003774  0.521471     0.097634           1            0   \n",
-       " 1             -0.003774  0.521471     0.097634           1            0   \n",
-       " 2             -0.003734  0.521471     0.097903           1            0   \n",
-       " 3             -0.003734  0.521471     0.097903           1            0   \n",
-       " 4             -0.003766  0.521471     0.097686           1            0   \n",
+       " 0              0.056776  0.879156     0.183904           1            1   \n",
+       " 1              0.052240  0.877965     0.183904           1            1   \n",
+       " 2              0.055793  0.878961     0.183904           1            1   \n",
+       " 3              0.048150  0.877368     0.183904           1            1   \n",
+       " 4              0.046252  0.876835     0.183904           1            1   \n",
        " \n",
        "    signal_quantile  pred_q50_orig  signal_prob_exp_q50  \n",
-       " 0                0       0.001436                    1  \n",
-       " 1                0       0.001436                    1  \n",
-       " 2                0       0.001436                    1  \n",
-       " 3                0       0.001436                    1  \n",
-       " 4                0       0.001436                    1  \n",
+       " 0                1       0.020667                    1  \n",
+       " 1                1       0.020667                    1  \n",
+       " 2                1       0.020667                    1  \n",
+       " 3                0       0.015703                    1  \n",
+       " 4                0       0.015703                    1  \n",
        " \n",
        " [5 rows x 22 columns],\n",
        "             timestamp    y_true  pred_q05  pred_q10  pred_q15  pred_q25  \\\n",
-       " 0 2025-03-25 10:00:00  0.000698 -0.064037 -0.045659 -0.031239 -0.015879   \n",
-       " 1 2025-03-25 11:00:00 -0.004851 -0.064037 -0.045659 -0.031239 -0.015879   \n",
-       " 2 2025-03-25 12:00:00 -0.003764 -0.064037 -0.045659 -0.031239 -0.015879   \n",
-       " 3 2025-03-25 13:00:00 -0.013901 -0.064037 -0.045659 -0.031239 -0.015879   \n",
-       " 4 2025-03-25 14:00:00 -0.008245 -0.064037 -0.045659 -0.031239 -0.015879   \n",
+       " 0 2025-03-22 20:00:00  0.039409 -0.080557 -0.067324 -0.064692 -0.029207   \n",
+       " 1 2025-03-22 21:00:00  0.041341 -0.080557 -0.067324 -0.062127 -0.029207   \n",
+       " 2 2025-03-22 22:00:00  0.039506 -0.080557 -0.067324 -0.065223 -0.029207   \n",
+       " 3 2025-03-22 23:00:00  0.039612 -0.080557 -0.067324 -0.067320 -0.029207   \n",
+       " 4 2025-03-23 00:00:00  0.039097 -0.080557 -0.067324 -0.063027 -0.029207   \n",
        " \n",
        "    pred_q50  pred_q75  pred_q85  pred_q90  ...  max_cross_gap  exp_ret_avg  \\\n",
-       " 0 -0.003932  0.015272  0.024117  0.046552  ...            0.0    -0.001756   \n",
-       " 1 -0.003932  0.015272  0.023660  0.046552  ...            0.0    -0.001791   \n",
-       " 2 -0.003932  0.015272  0.023896  0.045141  ...            0.0    -0.001843   \n",
-       " 3 -0.003932  0.015272  0.023439  0.045141  ...            0.0    -0.001878   \n",
-       " 4 -0.003932  0.015272  0.023439  0.045141  ...            0.0    -0.001878   \n",
+       " 0  0.000369  0.026686  0.053891  0.084143  ...            0.0     0.001654   \n",
+       " 1  0.000369  0.026686  0.052900  0.084143  ...            0.0     0.001772   \n",
+       " 2  0.000369  0.026686  0.055688  0.084143  ...            0.0     0.001749   \n",
+       " 3  0.000369  0.026686  0.055688  0.084143  ...            0.0     0.001592   \n",
+       " 4 -0.000289  0.025748  0.061642  0.084143  ...            0.0     0.002032   \n",
        " \n",
-       "    exp_ret_conservative  prob_up  tail_spread  signal_exp  signal_prob  \\\n",
-       " 0             -0.008619  0.44881      0.12571          -1           -1   \n",
-       " 1             -0.008642  0.44881      0.12571          -1           -1   \n",
-       " 2             -0.008701  0.44881      0.12571          -1           -1   \n",
-       " 3             -0.008724  0.44881      0.12571          -1           -1   \n",
-       " 4             -0.008724  0.44881      0.12571          -1           -1   \n",
+       "    exp_ret_conservative   prob_up  tail_spread  signal_exp  signal_prob  \\\n",
+       " 0             -0.010188  0.503116     0.187409           1            0   \n",
+       " 1             -0.009981  0.503116     0.187409           1            0   \n",
+       " 2             -0.010151  0.503116     0.187409           1            0   \n",
+       " 3             -0.010361  0.503116     0.187409           1            0   \n",
+       " 4             -0.009892  0.497228     0.187409           1            0   \n",
        " \n",
        "    signal_quantile  pred_q50_orig  signal_prob_exp_q50  \n",
-       " 0               -1      -0.003932                    0  \n",
-       " 1               -1      -0.003932                    0  \n",
-       " 2               -1      -0.003932                    0  \n",
-       " 3               -1      -0.003932                    0  \n",
-       " 4               -1      -0.003932                    0  \n",
+       " 0                1       0.000369                    0  \n",
+       " 1                1       0.000369                    0  \n",
+       " 2                1       0.000369                    0  \n",
+       " 3                1       0.000369                    0  \n",
+       " 4                1      -0.000289                    0  \n",
        " \n",
        " [5 rows x 22 columns])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Add indicator to each split\n",
-    "train_ind = add_prob_exp_q50_indicator(train_df, orig_train_df, tau_long=0.52, tau_short=0.48, exp_col=\"exp_ret_avg\", out_col=\"signal_prob_exp_q50\")\n",
-    "val_ind = add_prob_exp_q50_indicator(val_df, orig_val_df, tau_long=0.52, tau_short=0.48, exp_col=\"exp_ret_avg\", out_col=\"signal_prob_exp_q50\")\n",
-    "test_ind = add_prob_exp_q50_indicator(test_df, orig_test_df, tau_long=0.52, tau_short=0.48, exp_col=\"exp_ret_avg\", out_col=\"signal_prob_exp_q50\")\n",
+    "train_ind = add_prob_exp_q50_indicator(train_df, orig_train_df, tau_long=0.52, tau_short=0.4, exp_col=\"exp_ret_avg\", out_col=\"signal_prob_exp_q50\")\n",
+    "val_ind = add_prob_exp_q50_indicator(val_df, orig_val_df, tau_long=0.52, tau_short=0.4, exp_col=\"exp_ret_avg\", out_col=\"signal_prob_exp_q50\")\n",
+    "test_ind = add_prob_exp_q50_indicator(test_df, orig_test_df, tau_long=0.52, tau_short=0.4, exp_col=\"exp_ret_avg\", out_col=\"signal_prob_exp_q50\")\n",
     "\n",
     "print(\"Indicator value counts (train/val/test):\")\n",
     "print(train_ind[\"signal_prob_exp_q50\"].value_counts().sort_index())\n",
@@ -911,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "id": "cf3d3a9a",
    "metadata": {},
    "outputs": [
@@ -919,38 +918,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train: trades=4894, win_rate=0.911, cumulative_pct=19808.666912\n",
-      "val: trades=100, win_rate=0.360, cumulative_pct=-58.990964\n",
-      "test: trades=144, win_rate=0.715, cumulative_pct=317.541713\n"
+      "train: trades=8272, win_rate=0.912, cumulative_pct=40465.401999\n",
+      "val: trades=404, win_rate=0.829, cumulative_pct=1593.934841\n",
+      "test: trades=58, win_rate=0.655, cumulative_pct=246.091098\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(timestamp\n",
-       " 2024-11-06 19:00:00    19806.528814\n",
-       " 2024-11-06 20:00:00    19806.528814\n",
-       " 2024-11-06 21:00:00    19806.528814\n",
-       " 2024-11-06 22:00:00    19807.473076\n",
-       " 2024-11-06 23:00:00    19808.666912\n",
+       " 2024-11-04 16:00:00    40414.587100\n",
+       " 2024-11-04 17:00:00    40426.970548\n",
+       " 2024-11-04 18:00:00    40439.833512\n",
+       " 2024-11-04 19:00:00    40452.140113\n",
+       " 2024-11-04 20:00:00    40465.401999\n",
        " dtype: float64,\n",
        " timestamp\n",
-       " 2025-03-25 05:00:00   -58.990964\n",
-       " 2025-03-25 06:00:00   -58.990964\n",
-       " 2025-03-25 07:00:00   -58.990964\n",
-       " 2025-03-25 08:00:00   -58.990964\n",
-       " 2025-03-25 09:00:00   -58.990964\n",
+       " 2025-03-22 15:00:00    1593.934841\n",
+       " 2025-03-22 16:00:00    1593.934841\n",
+       " 2025-03-22 17:00:00    1593.934841\n",
+       " 2025-03-22 18:00:00    1593.934841\n",
+       " 2025-03-22 19:00:00    1593.934841\n",
        " dtype: float64,\n",
        " timestamp\n",
-       " 2025-08-10 16:00:00    317.541713\n",
-       " 2025-08-10 17:00:00    317.541713\n",
-       " 2025-08-10 18:00:00    317.541713\n",
-       " 2025-08-10 19:00:00    317.541713\n",
-       " 2025-08-10 20:00:00    317.541713\n",
+       " 2025-08-07 16:00:00    246.091098\n",
+       " 2025-08-07 17:00:00    246.091098\n",
+       " 2025-08-07 18:00:00    246.091098\n",
+       " 2025-08-07 19:00:00    246.091098\n",
+       " 2025-08-07 20:00:00    246.091098\n",
        " dtype: float64)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
